<resources>

    <string name="app_name">PTani app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Alamat Email</string>
    <string name="passowrd">Password</string>
    <string name="login">Login</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Lupa Password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Daftar Sekarang</string>
    <string name="fullName">Nama Lengkap</string>
    <string name="mobileNumber">Nomor Telepon</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">Dengan mengklik Daftar, Anda menyetujui semua Syarat dan Ketentuan.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Sudah punya akun? Masuk disini.</string>
    <string name="registered_emailid">Silakan masukkan nama email anda yang sudah terdaftar di bawah ini:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">Kembali</string>
    <string name="action_Cart">Cart</string>
</resources>
