<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="-8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave_bg_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="136dp"
            android:layout_height="126dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_15dp"
            android:src="@drawable/logo_petani1" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:padding="5dp"
        android:text="@string/signUp"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:digits="abcdefghijklmnopqrstuvwxyz . ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/fullName"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/black"
            android:textSize="18dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@color/colorAccent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/userEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/black"
            android:textSize="18dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:digits="0123456789"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:maxLength="12"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/black"
            android:textSize="18dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorAccent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="7dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/black"
            android:textSize="18dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent" />

    <CheckBox
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/black"
        android:textSize="15sp" />

    <Button
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:id="@+id/signUpBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textColor="@color/white_greyish"
        android:textSize="17sp"
        android:textStyle="bold" />

    <com.kelompok1.labs.ptaniapp.customfonts.MyTextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/black"
        android:textSize="16dp" />

    </LinearLayout>

</RelativeLayout>