<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/bg1"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="-8dp"
            android:layout_marginTop="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_wave_bg_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>


        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="182dp"
                android:layout_height="202dp"
                android:layout_gravity="center"
                android:layout_marginTop="-15dp"
                android:src="@drawable/logo_petani1" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginTop="115dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="5dp"
                android:baselineAligned="false"
                android:text="Sign in"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/login_emailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/yellow"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/colorAccent" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="@dimen/margin_20dp"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/yellow"
                    android:textSize="18dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="5dp">

                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_pwd"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_layout"
                    android:padding="5dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/newUser"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_15dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="5dp"
                    android:text="@string/forgot"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="@dimen/margin_15dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="3dp"
                android:text="@string/login"
                android:textColor="@color/white_greyish"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>